--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -482,3 +482,7 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 <router-outlet></router-outlet>
+
+<!--<div>-->
+<!--  <img src="assets/images/marvin-meyer-SYTO3xs06fU-unsplash.jpg" class="img-fluid" alt="" />-->
+<!--</div>-->
